se agrego ajax en el archivo ajax4

--- a/AJAX2.html
+++ b/AJAX2.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <section id="Seccion1">
-
+        <input type="text">
+        <button>Enviar</button>
     </section>
     <button id="btn1">Ver Empleados</button>
     <script src="jquery-3.6.3.min.js"></script>
