se agrego un segundo parrafo en ajax5

--- a/AJAX5.html
+++ b/AJAX5.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Traer Empleados de desarrollo</h1>
     <p>Parrafo agregado</p>
+    <p>segundo parrafo agregado</p>
     <ul id="ListaEmpleados"></ul>
     <button id="Btn">Ver empleados</button>
     <script src="jquery-3.6.3.min.js"></script>
