--- a/AJAX7.html
+++ b/AJAX7.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Titulo de la pagina</h1>
     <div id="Contenedor"></div>
     <button id="Btn">Traer waifus</button>
     <script>
