se agrego un label en el archivo ajax7

--- a/AJAX7.html
+++ b/AJAX7.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Titulo de la pagina</h1>
+    <label>Etiqueta de prueba</label>
     <div id="Contenedor"></div>
     <button id="Btn">Traer waifus</button>
     <script>
